unpackaged/main/default/objects/Account/fields/Hamster_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Hamster_Descriptions__c</fullName>
    <description>describe your hamster please</description>
    <inlineHelpText>describe your hamster please, be sure to say what breed it is e.g. syrian, russian dwarf etc</inlineHelpText>
    <label>Hamster Descriptions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>