unpackaged/main/default/objects/Account/fields/Has_Hamster__c.field-meta.xml
<CustomField>
    <fullName>Has_Hamster__c</fullName>
    <defaultValue>true</defaultValue>
    <description>does the user have a hamster or no</description>
    <inlineHelpText>does the user have a hamster or no</inlineHelpText>
    <label>Has Hamster?</label>
    <type>Checkbox</type>
</CustomField>