unpackaged/main/default/objects/Account/fields/Has_Rat__c.field-meta.xml
<CustomField>
    <fullName>Has_Rat__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Do you have a rat or no</inlineHelpText>
    <label>Has Rat?</label>
    <type>Checkbox</type>
</CustomField>